--- a/register.html
+++ b/register.html
@@ -122,7 +122,7 @@
 
         <label>
             <input type="checkbox" id="term" required style="margin-right: 8px;">
-            J’ai lu et j’accepte les <a href="conditions.html" target="_blank" style="color: #00aaff;">conditions d’utilisation</a>
+            J’ai lu et j’accepte les <a id="checkboxBool" href="conditions.html" target="_blank" style="color: #00aaff;">conditions d’utilisation</a>
         </label>
 
 
