--- a/register.html
+++ b/register.html
@@ -128,7 +128,7 @@
 
       <button type="submit" id="submitbtn">S’inscrire</button>
     </form>
-    <p>Déjà un compte ? <a href="login.html">Se connecter</a></p>
+    <p>Déjà un compte ? <a href="/login">Se connecter</a></p>
   </div>
 
   <script>
