--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <input type="password" id="password" placeholder="Mot de passe" required>
       <button type="submit">Se connecter</button>
     </form>
-    <p>Pas encore de compte ? <a href="/register">Créer un compte</a></p>
+    <p>Pas encore de compte ? <a href="/inscription">Créer un compte</a></p>
   </div>
 
   <script>
