--- a/index.html
+++ b/index.html
@@ -236,6 +236,6 @@
       halo.style.top = e.pageY + "px";
     });
   </script>
-  <script src="loginscript.js"></script>
+  <script type="module" src="loginscript.js"></script>
 </body>
 </html>
