--- a/index.html
+++ b/index.html
@@ -237,5 +237,6 @@
     });
   </script>
   <script type="module" src="loginscript.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/supabase.min.js"></script>
 </body>
 </html>
