--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Laval - Connexion</title>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
       overflow: hidden;
@@ -19,7 +15,7 @@
       justify-content: center;
       align-items: center;
       color: white;
-      background-color: #000; /* Fond noir pur */
+      background-color: #000;
     }
 
     canvas#bg {
@@ -27,11 +23,11 @@
       top: 0;
       left: 0;
       z-index: -1;
-      background-color: #000; /* assure que le fond reste noir même si le canvas clear */
+      background-color: #000;
     }
 
     .login-box {
-      background: rgba(20, 20, 20, 0.8);
+      background: rgba(20, 20, 20, 0.85);
       padding: 40px 30px;
       border-radius: 15px;
       box-shadow: 0 0 25px rgba(255, 0, 0, 0.3);
@@ -59,9 +55,7 @@
       outline: none;
     }
 
-    .login-box input::placeholder {
-      color: #aaa;
-    }
+    .login-box input::placeholder { color: #aaa; }
 
     .login-box button {
       width: 100%;
@@ -92,18 +86,21 @@
       text-decoration: none;
     }
 
-    .login-box a:hover {
-      text-decoration: underline;
+    .login-box a:hover { text-decoration: underline; }
+
+    #loginError {
+      color: #ff6b6b;
+      font-size: 14px;
+      margin-top: 5px;
     }
 
-    /* Halo souris */
     #halo {
       position: fixed;
       width: 60px;
       height: 60px;
       border-radius: 50%;
       pointer-events: none;
-      background: radial-gradient(circle, rgba(255, 0, 0, 0.2) 0%, transparent 70%);
+      background: radial-gradient(circle, rgba(255,0,0,0.2) 0%, transparent 70%);
       transform: translate(-50%, -50%);
       z-index: -1;
     }
@@ -115,26 +112,70 @@
 
   <div class="login-box">
     <h1>Connexion Laval</h1>
-    <form id="loginForm" onsubmit="event.preventDefault()">
+    <form id="loginForm">
       <input type="text" id="username" placeholder="Nom d’utilisateur" required>
       <input type="password" id="password" placeholder="Mot de passe" required>
       <button type="submit">Se connecter</button>
+      <div id="loginError"></div>
     </form>
-    <p>Pas encore de compte ? <a href="/inscription">Créer un compte</a></p>
+    <p>Pas encore de compte ? <a href="register.html">Créer un compte</a></p>
   </div>
 
-  <script>
+  <script type="module">
+    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+
+    const supabaseUrl = "https://bulvtqcdmkzztesxjjpt.supabase.co";
+    const supabaseKey = "TA_ANON_KEY"; // Remplace par ta clé ANON
+    const supabase = createClient(supabaseUrl, supabaseKey);
+
+    const loginForm = document.getElementById("loginForm");
+    const loginError = document.getElementById("loginError");
+
+    loginForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      loginError.textContent = '';
+
+      const username = document.getElementById("username").value.trim();
+      const password = document.getElementById("password").value.trim();
+
+      if (!username || !password) {
+        loginError.textContent = "Remplis tous les champs.";
+        return;
+      }
+
+      try {
+        const { data, error } = await supabase
+          .from("Comptes")
+          .select("username,email,rank")
+          .match({ username, password })
+          .maybeSingle();
+
+        if (error) {
+          console.error("Erreur Supabase :", error);
+          loginError.textContent = "Erreur serveur — réessaie plus tard.";
+          return;
+        }
+
+        if (!data) {
+          loginError.textContent = "Nom d’utilisateur ou mot de passe incorrect.";
+          return;
+        }
+
+        localStorage.setItem("user", JSON.stringify(data));
+        console.log("Connexion réussie :", data);
+        window.location.href = "/main.html";
+
+      } catch (err) {
+        console.error("Erreur inattendue :", err);
+        loginError.textContent = "Erreur inattendue — réessaie plus tard.";
+      }
+    });
+
     // === FOND ANIMÉ ===
     const canvas = document.getElementById("bg");
     const ctx = canvas.getContext("2d");
-    let w, h;
-    let particles = [];
-    let sparks = [];
-
-    function resize() {
-      w = canvas.width = window.innerWidth;
-      h = canvas.height = window.innerHeight;
-    }
+    let w, h, particles = [], sparks = [];
+    function resize() { w = canvas.width = window.innerWidth; h = canvas.height = window.innerHeight; }
     window.addEventListener("resize", resize);
     resize();
 
@@ -148,95 +189,48 @@
         this.color = Math.random() > 0.5 ? "rgba(255,0,0," : "rgba(0,102,255,";
         this.life = Math.random() * 200 + 100;
       }
-      update() {
-        this.x += this.speedX;
-        this.y += this.speedY;
-        this.life--;
-        if (this.x < 0 || this.x > w) this.speedX *= -1;
-        if (this.y < 0 || this.y > h) this.speedY *= -1;
-      }
-      draw() {
-        ctx.beginPath();
-        ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-        ctx.fillStyle = this.color + (this.life / 200) + ")";
-        ctx.fill();
-      }
+      update() { this.x += this.speedX; this.y += this.speedY; this.life--; if(this.x<0||this.x>w)this.speedX*=-1; if(this.y<0||this.y>h)this.speedY*=-1; }
+      draw() { ctx.beginPath(); ctx.arc(this.x,this.y,this.size,0,Math.PI*2); ctx.fillStyle=this.color+(this.life/200)+")"; ctx.fill(); }
     }
 
     class Spark {
-      constructor() {
-        this.x = Math.random() * w;
-        this.y = Math.random() * h;
-        this.size = Math.random() * 2 + 1;
-        this.life = 30 + Math.random() * 30;
-      }
-      update() {
-        this.life--;
-        this.y -= 0.5;
-      }
-      draw() {
-        ctx.beginPath();
-        ctx.arc(this.x, this.y, this.size, 0, Math.PI*2);
-        ctx.fillStyle = "rgba(255, 255, 0,"+(this.life/60)+")";
-        ctx.fill();
-      }
+      constructor() { this.x=Math.random()*w; this.y=Math.random()*h; this.size=Math.random()*2+1; this.life=30+Math.random()*30; }
+      update() { this.life--; this.y-=0.5; }
+      draw() { ctx.beginPath(); ctx.arc(this.x,this.y,this.size,0,Math.PI*2); ctx.fillStyle="rgba(255,255,0,"+(this.life/60)+")"; ctx.fill(); }
     }
 
-    function connectParticles() {
-      for (let a = 0; a < particles.length; a++) {
-        for (let b = a; b < particles.length; b++) {
-          let dx = particles[a].x - particles[b].x;
-          let dy = particles[a].y - particles[b].y;
-          let dist = Math.sqrt(dx * dx + dy * dy);
-          if (dist < 120) {
+    function connectParticles(){
+      for(let a=0;a<particles.length;a++){
+        for(let b=a;b<particles.length;b++){
+          let dx=particles[a].x-particles[b].x;
+          let dy=particles[a].y-particles[b].y;
+          let dist=Math.sqrt(dx*dx+dy*dy);
+          if(dist<120){
             ctx.beginPath();
-            ctx.strokeStyle = "rgba(255,0,0,0.15)";
-            if (Math.random() > 0.5) ctx.strokeStyle = "rgba(0,102,255,0.15)";
-            ctx.lineWidth = 1;
-            ctx.moveTo(particles[a].x, particles[a].y);
-            ctx.lineTo(particles[b].x, particles[b].y);
+            ctx.strokeStyle=Math.random()>0.5?"rgba(0,102,255,0.15)":"rgba(255,0,0,0.15)";
+            ctx.lineWidth=1;
+            ctx.moveTo(particles[a].x,particles[a].y);
+            ctx.lineTo(particles[b].x,particles[b].y);
             ctx.stroke();
           }
         }
       }
     }
 
-    function animate() {
-      ctx.fillStyle = "rgba(0, 0, 0, 0.2)";
-      ctx.fillRect(0, 0, w, h);
-
-      if (particles.length < 120) {
-        particles.push(new Particle());
-      }
-      particles.forEach((p, i) => {
-        p.update();
-        p.draw();
-        if (p.life <= 0) particles.splice(i, 1);
-      });
-
-      if (Math.random() < 0.05) {
-        sparks.push(new Spark());
-      }
-      sparks.forEach((s, i) => {
-        s.update();
-        s.draw();
-        if (s.life <= 0) sparks.splice(i, 1);
-      });
-
+    function animate(){
+      ctx.fillStyle="rgba(0,0,0,0.2)";
+      ctx.fillRect(0,0,w,h);
+      if(particles.length<120) particles.push(new Particle());
+      particles.forEach((p,i)=>{ p.update(); p.draw(); if(p.life<=0) particles.splice(i,1); });
+      if(Math.random()<0.05) sparks.push(new Spark());
+      sparks.forEach((s,i)=>{ s.update(); s.draw(); if(s.life<=0) sparks.splice(i,1); });
       connectParticles();
       requestAnimationFrame(animate);
     }
-
     animate();
 
-    // === HALO SOURIS ===
     const halo = document.getElementById("halo");
-    document.addEventListener("mousemove", (e) => {
-      halo.style.left = e.pageX + "px";
-      halo.style.top = e.pageY + "px";
-    });
+    document.addEventListener("mousemove",(e)=>{ halo.style.left=e.pageX+"px"; halo.style.top=e.pageY+"px"; });
   </script>
-  <script type="module" src="loginscript.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/supabase.min.js"></script>
 </body>
 </html>
