--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
     const supabaseUrl = "https://bulvtqcdmkzztesxjjpt.supabase.co";
-    const supabaseKey = "TA_ANON_KEY"; // Remplace par ta clé ANON
+    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJ1bHZ0cWNkbWt6enRlc3hqanB0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTk1ODcyMzEsImV4cCI6MjA3NTE2MzIzMX0.ZxK9kRefeiQyqZQS7zU6J1Y2CM0zd_tMAfwLi7nDB5g"; // Remplace par ta clé ANON
     const supabase = createClient(supabaseUrl, supabaseKey);
 
     const loginForm = document.getElementById("loginForm");
